@@ -1,15 +1,12 @@
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.StandardOpenOption;
-import java.time.LocalDateTime;
-import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Scanner;
 import java.util.stream.Stream;
 
-public class Ej03 {
+public class Ej04_1 {
     public static void imprimirFichero(Path rutaFichero) {
         try (Stream<String> lineas = Files.lines(rutaFichero)) {
             lineas.forEach(System.out::println);
@@ -17,10 +14,9 @@ public class Ej03 {
             ex.printStackTrace();
         }
     }
-
     public static void main(String[] args) {
         Scanner sc = new Scanner(System.in);
-        Path ruta = Path.of("/media/aitgal/WRXelement/Dam2/GitHub/AccesoDatos/Unidad01/Ej04-EscrituraFicheros", "anotaciones.txt");
+        Path ruta = Path.of("/media/aitgal/WRXelement/Dam2/GitHub/AccesoDatos/Unidad01/Ej04-EscrituraFicheros", "frases.txt");
         List<String> stringList = new ArrayList<>();
         String linea;
 
@@ -28,19 +24,13 @@ public class Ej03 {
         do {
             linea = sc.nextLine();
             if (!linea.equals("")) {
-                stringList.add(LocalDateTime.now().format(DateTimeFormatter.ofPattern("dd-MM-yyyy HH:mm:ss")) + " - " + linea);
+                stringList.add(linea);
             }
 
         }while(!linea.equals(""));
 
         try {
-            if (!Files.exists(ruta))
-                Files.write(ruta, String.join("\n", stringList).getBytes());
-            else {
-                Files.writeString(ruta, "\n", StandardOpenOption.APPEND);
-                Files.write(ruta, String.join("\n", stringList).getBytes(), StandardOpenOption.APPEND);
-            }
-
+            Files.write(ruta, String.join("\n", stringList).getBytes());
         } catch (IOException ex) {
             ex.printStackTrace();
         }
